# HourPush

./: .env example  .gitignore  LICENSE  README.md  example .env  pyproject.toml  requirements.txt
app/: __main__.py  dump.json  run.py
app/config/: bitrix_config.py  config_setup.py  db_config.py  logging_config.py
app/core/: core.py
app/core/config/: logger_setup.py  main_config.py
app/core/models/: __init__.py  bitrix_model.py  database_model.py
app/core/operations/api/: action.py
app/core/operations/api_operations/: action.py
app/core/operations/database/: __init__.py  json_to_dataframe.py  load_json.py  load_tasks_data.py  save_to_database.py  transform_data.py
app/core/operations/fetch_bitrix_data/: get_sprint_stages.py  get_sprint_tasks.py  get_tasks_comments.py
app/core/operations/fetch_data/: __init__.py  get_active_sprint.py  get_tasks_comments.py
app/core/operations/get/: __init__.py  get_comments.py  get_sprint.py  get_stages.py  get_tasks.py
app/core/operations/process/: __init__.py  file_methods.py  file_utils.py  process_comments.py  process_date.py  process_tasks.py  save_tasks.py  tasks_processing.py
app/core/operations/process_data/: __init__.py  get_current_date.py
app/core/src/api/: bitrix_client.py
app/core/src/db/: database.py
app/core/utils/: config_setup.py
app/functions/api/: bitrix_client.py
app/functions/sprint/: get_stages.py
app/src/db/: database.py
app/src/processing/: __init__.py  process_leadtime.py  process_touchtime.py
app/src/sprint/: __init__.py  get_active_sprint.py  get_tasks.py
(+9 files in other folders)
